[gd_scene load_steps=10 format=3 uid="uid://c2avt6b6weif7"]

[ext_resource type="Script" path="res://Scripts/pauseSettings.gd" id="1_pf6uf"]
[ext_resource type="FontFile" uid="uid://crmpbal4ch8up" path="res://Scenes/Global/ACDiaryGirlUnicode.otf" id="2_5es47"]
[ext_resource type="PackedScene" uid="uid://bvo7b7usxg0ie" path="res://Scenes/InputSettings/inputSettings.tscn" id="3_05xwx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4o818"]
bg_color = Color(0.419608, 0.0745098, 0.0705882, 0.803922)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_601k3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5bfac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hr28t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6dyxt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_561tv"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pf6uf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4o818")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="continueGame" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_colors/font_hover_color = Color(0.646029, 0.646029, 0.646029, 1)
theme_override_fonts/font = ExtResource("2_5es47")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_601k3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5bfac")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hr28t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6dyxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_561tv")
text = "continua partita"

[node name="Separator3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="options" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_colors/font_hover_color = Color(0.646029, 0.646029, 0.646029, 1)
theme_override_fonts/font = ExtResource("2_5es47")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_601k3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5bfac")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hr28t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6dyxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_561tv")
text = "opzioni"

[node name="Separator2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="commands" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_colors/font_hover_color = Color(0.646029, 0.646029, 0.646029, 1)
theme_override_fonts/font = ExtResource("2_5es47")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_601k3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5bfac")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hr28t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6dyxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_561tv")
text = "comandi
"

[node name="Separator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_colors/font_hover_color = Color(0.646029, 0.646029, 0.646029, 1)
theme_override_fonts/font = ExtResource("2_5es47")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_601k3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5bfac")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hr28t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6dyxt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_561tv")
text = "ritorna al menu' iniziale"

[node name="InputSettings" parent="." instance=ExtResource("3_05xwx")]
layout_mode = 1
